--- a/Darkrai.ipynb
+++ b/Darkrai.ipynb
@@ -1,11 +1,113 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e4fb6913-8677-469c-ad44-b8b6e66f0546",
    "metadata": {},
    "source": [
-    "# ARIMA Model"
+    "# ARIMA Model\n",
+    "\n",
+    "Here is a clean and structured explanation of the time complexity of ARIMA components, along with SARIMAX:\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "# **Time Complexity of ARIMA and SARIMAX**\r\n",
+    "\r\n",
+    "## **1. Time Complexity of ARIMA Components**\r\n",
+    "\r\n",
+    "### **a) AutoRegressive (AR) Component**\r\n",
+    "The AR component models dependencies on past time steps and requires solving a linear regression problem with \\( p \\) past values. This is typically done using **Ordinary Least Squares (OLS)**.\r\n",
+    "\r\n",
+    "- **Using OLS**: Complexity is \\( O(p^2) \\) due to matrix inversion.\r\n",
+    "- **Using Gradient Descent**: Complexity reduces to \\( O(pT) \\), where \\( T \\) is the number of time steps.\r\n",
+    "\r\n",
+    "### **b) Differencing (I) Component**\r\n",
+    "The differencing step (order \\( d \\)) transforms the data into a stationary series by computing:\r\n",
+    "\r\n",
+    "\\[\r\n",
+    "Y'_t = Y_t - Y_{t-1}\r\n",
+    "\\]\r\n",
+    "\r\n",
+    "- Requires a **single pass** over \\( T \\) data points for each differencing operation.\r\n",
+    "- Since \\( d \\) differencing operations are performed, complexity is \\( O(dT) \\).\r\n",
+    "- However, as \\( d \\) is usually small, it is considered **negligible** in practice.\r\n",
+    "\r\n",
+    "### **c) Moving Average (MA) Component**\r\n",
+    "The MA component models dependencies on past error terms and requires computing moving averages over a window of size \\( q \\).\r\n",
+    "\r\n",
+    "- This involves solving a system of equations with \\( q \\) parameters.\r\n",
+    "- Complexity is **\\( O(qT) \\)**.\r\n",
+    "\r\n",
+    "### **d) Parameter Estimation via Maximum Likelihood Estimation (MLE)**\r\n",
+    "ARIMA parameters \\( (p, d, q) \\) are estimated using **MLE** or **Expectation-Maximization (EM)** methods.\r\n",
+    "\r\n",
+    "- Typical complexity for **MLE estimation**:  \r\n",
+    "  \\[\r\n",
+    "  O(T \\cdot (p + q)^2)\r\n",
+    "  \\]\r\n",
+    "  when using numerical optimization.\r\n",
+    "\r\n",
+    "### **e) Total Time Complexity of ARIMA**\r\n",
+    "The overall complexity of ARIMA is determined by the dominant term:\r\n",
+    "\r\n",
+    "\\[\r\n",
+    "O(pT) + O(dT) + O(qT) + O(T(p + q)^2)\r\n",
+    "\\]\r\n",
+    "\r\n",
+    "Since \\( O(dT) \\) is negligible, the highest-order term dominates, giving the final complexity:\r\n",
+    "\r\n",
+    "\\[\r\n",
+    "O(T (p + q)^2)\r\n",
+    "\\]\r\n",
+    "\r\n",
+    "- For **small \\( p, q \\)**: **Linear complexity** \\( O(T) \\).\r\n",
+    "- For **large \\( p, q \\)**: **Quadratic complexity** \\( O(T p^2) \\) or \\( O(T q^2) \\).\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "## **2. Time Complexity of SARIMAX**\r\n",
+    "SARIMAX (Seasonal ARIMA with Exogenous Variables) extends ARIMA by including:\r\n",
+    "1. **Seasonal components** (\\( P, D, Q, s \\))\r\n",
+    "2. **Exogenous variables (X)**\r\n",
+    "\r\n",
+    "### **a) Seasonal Component (SARIMA)**\r\n",
+    "The seasonal component adds an **extra ARIMA-like model** for seasonality with parameters \\( (P, D, Q, s) \\).\r\n",
+    "\r\n",
+    "- The **complexity contribution** is similar to ARIMA but scales with seasonality \\( s \\):\r\n",
+    "\r\n",
+    "  \\[\r\n",
+    "  O(T (P + Q)^2)\r\n",
+    "  \\]\r\n",
+    "\r\n",
+    "### **b) Exogenous Variables (SARIMAX)**\r\n",
+    "Exogenous regressors \\( X \\) introduce a regression component alongside ARIMA.\r\n",
+    "\r\n",
+    "- If there are **\\( k \\) exogenous variables**, **MLE estimation** of exogenous coefficients adds:\r\n",
+    "\r\n",
+    "  \\[\r\n",
+    "  O(T k^2)\r\n",
+    "  \\]\r\n",
+    "\r\n",
+    "### **c) Total Complexity of SARIMAX**\r\n",
+    "The final complexity for SARIMAX is:\r\n",
+    "\r\n",
+    "\\[\r\n",
+    "O(T(p + q + P + Q + k)^2)\r\n",
+    "\\]\r\n",
+    "\r\n",
+    "- If **seasonality and exogenous variables are small**, SARIMAX behaves like ARIMA:  \r\n",
+    "  **\\( O(T(p + q)^2) \\)**.\r\n",
+    "- If **many seasonal and exogenous terms exist**, the cost increases quadratically.\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "## **Conclusion**\r\n",
+    "- **ARIMA** complexity: \\( O(T (p + q)^2) \\).\r\n",
+    "- **SARIMAX** complexity: \\( O(T(p + q + P + Q + k)^2) \\) (higher due to seasonal & exogenous terms).\r\n",
+    "- **For small parameters**, the complexity is nearly *ionally expensive.\r\n",
+    "\r\n",
+    "Would you like a comparison table summarizing ARIMA vs. SARIMAX complexity? 😊"
    ]
   },
   {
@@ -279,6 +381,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1cab1425-7b1f-496d-9ca9-64ac90c41f9c",
+   "metadata": {},
+   "source": [
+    "# ________________________________________________________________________________________________________________________________\n",
+    "\n",
+    "**SARIMAX (Seasonal AutoRegressive Integrated Moving Average with eXogenous regressors)**  \n",
+    "\n",
+    "SARIMAX is an extension of ARIMA (AutoRegressive Integrated Moving Average) that incorporates seasonality and external variables (exogenous regressors). It is commonly used for time series forecasting when data exhibits seasonal patterns and can be influenced by additional variables.  \n",
+    "\n",
+    "### **Components of SARIMAX**  \n",
+    "SARIMAX follows the standard ARIMA structure while adding seasonal components:  \n",
+    "- **AR (AutoRegressive term - p)**: Captures relationships between past values.  \n",
+    "- **I (Integration - d)**: Differencing to make the time series stationary.  \n",
+    "- **MA (Moving Average term - q)**: Accounts for past forecast errors.  \n",
+    "- **S (Seasonal component - P, D, Q, s)**: Adds seasonal variations in the data.  \n",
+    "- **X (Exogenous variables - X_t)**: Includes external variables that impact the time series.  \n",
+    "\n",
+    "### **Time Complexity of SARIMAX**  \n",
+    "The time complexity of SARIMAX depends on several factors, primarily the number of parameters and data points. The key computational steps include:  \n",
+    "\n",
+    "1. **Likelihood Estimation (O(nT))**: The log-likelihood function is optimized over time steps \\( T \\), and each iteration depends on the number of parameters \\( n \\).  \n",
+    "2. **Kalman Filtering (O(Tk^2))**: SARIMAX uses the Kalman filter for parameter estimation, where \\( k \\) is the number of state variables. This results in \\( O(Tk^2) \\) complexity.  \n",
+    "3. **Optimization (O(n^3))**: The numerical optimization for parameter estimation usually has cubic complexity concerning the number of parameters \\( n \\).  \n",
+    "\n",
+    "**Overall Complexity**  \n",
+    "- **Best Case (Well-Tuned Model, Small Data):** \\( O(T) \\)  \n",
+    "- **Average Case (Common Usage with Moderate Data):** \\( O(Tk^2) \\)  \n",
+    "- **Worst Case (Large Dataset with High p, q, P, Q values):** \\( O(Tn^3) \\)  \n",
+    "\n",
+    "For large datasets, SARIMAX can become computationally expensive, but techniques like parallel computing and efficient matrix operations help mitigate this."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "0207f1b7-4c3f-4068-9504-e5fd5352d2d2",
@@ -411,6 +547,63 @@
    "metadata": {},
    "source": [
     "# Random Forest Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d051cdff-d92d-4971-859a-e6cb8ef4d2fa",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "### **Best-Case Complexity Analysis**\n",
+    "In an **ideal** situation where the dataset has:\n",
+    "- **Low values (small \\( N \\))** → Fewer data points\n",
+    "- **Low feature count (small \\( M \\))** → Fewer attributes\n",
+    "- **Balanced splits (pure splits)** → Fewer tree depth levels\n",
+    "\n",
+    "#### **1. Training Complexity in Best Case**\n",
+    "The training complexity in general is:\n",
+    "\\[\n",
+    "O(T m N \\log N)\n",
+    "\\]\n",
+    "But in the **best case**, the decision trees:\n",
+    "- Have fewer samples (\\( N \\) is small)\n",
+    "- Have fewer features (\\( M \\) is small, so \\( m \\approx \\sqrt{M} \\) is small)\n",
+    "- Have balanced splits (logarithmic depth \\( \\log N \\))\n",
+    "\n",
+    "Thus, the best-case training complexity reduces to:\n",
+    "\\[\n",
+    "O(T \\cdot \\sqrt{M} \\cdot N)\n",
+    "\\]\n",
+    "since \\( \\log N \\) is much smaller for small \\( N \\).\n",
+    "\n",
+    "#### **2. Prediction Complexity in Best Case**\n",
+    "In the best case, the trees are shallow (almost perfectly balanced), so the depth is minimal, reducing:\n",
+    "\\[\n",
+    "O(T N_{test} \\log N) \\quad \\to \\quad O(T N_{test})\n",
+    "\\]\n",
+    "if \\( \\log N \\) is small.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Comparison: Does It Stay the Same?**\n",
+    "1. **If \\( N \\) is small**, the logarithm term \\( \\log N \\) reduces, leading to lower complexity, but the general **order** remains similar.\n",
+    "2. **If trees are shallow**, traversal during both training and inference becomes faster.\n",
+    "3. **If the dataset is simple**, fewer splits and decisions are needed.\n",
+    "\n",
+    "Thus, while the **absolute time required is lower**, the **big-O complexity does not fundamentally change** because Random Forest still follows a tree-growing process that is dependent on \\( N \\) and \\( T \\).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Final Answer**\n",
+    "✅ **Yes, the Random Forest algorithm retains the same complexity class** \\( O(T m N \\log N) \\),  \n",
+    "but in the best case, the actual runtime **is significantly lower** because:\n",
+    "- \\( N \\) is small → log factor is negligible.\n",
+    "- \\( M \\) is small → fewer features to consider.\n",
+    "- \\( d \\) (tree depth) is small → trees train and infer faster.\n",
+    "\n",
+    "So, while complexity notation remains the same, execution time drops **drastically** in simpler datasets. 🚀"
    ]
   },
   {
@@ -553,6 +746,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac15a390-0a66-4293-86ff-1c634b9c4333",
+   "metadata": {},
+   "source": [
+    "# Lag features implementation and multi feature implementation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "id": "5a204137-3aef-42f1-96fb-8bedcb57b19b",
@@ -649,6 +850,83 @@
    "metadata": {},
    "source": [
     "# LSTM Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d07269a-80c9-401b-96ab-662f5a75bf76",
+   "metadata": {},
+   "source": [
+    "### **Deriving the Worst-Case Time Complexity of LSTM**  \n",
+    "\n",
+    "LSTM (Long Short-Term Memory) processes **sequential data** by maintaining a hidden state over multiple time steps. The **worst-case complexity** arises when dealing with long sequences, large hidden layers, and backpropagation through time (BPTT).  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Step 1: Understanding LSTM Computation**\n",
+    "For each time step \\( t \\), LSTM computes:  \n",
+    "1. **Four Gate Operations (Input, Forget, Output, Cell Update):**  \n",
+    "   Each gate involves matrix multiplications with weights and hidden states:  \n",
+    "   \\[\n",
+    "   W x_t + U h_{t-1} + b\n",
+    "   \\]  \n",
+    "   where:\n",
+    "   - \\( x_t \\) is the input vector of size \\( d \\).\n",
+    "   - \\( h_t \\) is the hidden state of size \\( h \\).\n",
+    "   - \\( W \\) (weights) is of size \\( h \\times d \\).\n",
+    "   - \\( U \\) (recurrent weights) is of size \\( h \\times h \\).\n",
+    "   - \\( b \\) is the bias term.\n",
+    "\n",
+    "   Since there are **4 gates**, the total computation per time step is:\n",
+    "   \\[\n",
+    "   O(4 (d h + h^2)) = O(d h + h^2)\n",
+    "   \\]\n",
+    "\n",
+    "2. **Forward Pass Complexity:**  \n",
+    "   For **\\( T \\) time steps**, the total forward pass complexity is:\n",
+    "   \\[\n",
+    "   O(T (d h + h^2))\n",
+    "   \\]\n",
+    "\n",
+    "3. **Backward Pass (Backpropagation Through Time - BPTT):**  \n",
+    "   The backward pass requires computing gradients and updating weights, which has the same complexity as the forward pass:\n",
+    "   \\[\n",
+    "   O(T (d h + h^2))\n",
+    "   \\]\n",
+    "\n",
+    "4. **Total Complexity (Forward + Backward):**  \n",
+    "   \\[\n",
+    "   O(2 T (d h + h^2)) = O(T (d h + h^2))\n",
+    "   \\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Step 2: Worst-Case Scenario**\n",
+    "The **worst-case complexity** occurs when:\n",
+    "- **Large dataset**: \\( N \\) is large.\n",
+    "- **Long time sequences**: \\( T \\) is large.\n",
+    "- **High-dimensional hidden state**: \\( h \\) is large.\n",
+    "- **Large input features**: \\( d \\) is large.\n",
+    "\n",
+    "Since LSTM processes all samples in the dataset, the total worst-case complexity is:\n",
+    "\\[\n",
+    "O(N T (d h + h^2))\n",
+    "\\]\n",
+    "\n",
+    "where:\n",
+    "- \\( N \\) = number of training samples  \n",
+    "- \\( T \\) = number of time steps  \n",
+    "- \\( d \\) = input feature size  \n",
+    "- \\( h \\) = number of hidden units  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Final Worst-Case Complexity Expression**\n",
+    "\\[\n",
+    "O(N T (d h + h^2))\n",
+    "\\]\n",
+    "\n",
+    "This means LSTM training complexity **scales linearly** with dataset size and time steps, but **quadratically** with the number of hidden units. 🚀"
    ]
   },
   {
@@ -1000,6 +1278,14 @@
     "print(\"\\nRaw Train MSE Values:\")\n",
     "for model, mse in model_results.items():\n",
     "    print(f\"{model}: Train MSE = {mse:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40472df1-615b-4dd9-9de7-9d00590ebb19",
+   "metadata": {},
+   "source": [
+    "# Optimised and non Biased Branch"
    ]
   },
   {
